Day 2 of editing my layout for a cleaner look

--- a/2012card.html
+++ b/2012card.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,17 +53,19 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="1238" width="2200" src="assets/images/2012holidaycard_poster.jpg" alt="Poster image showing an outtake of the 2012 Holiday Card photo shoot." >
-  	</div>
+</nav><!-- #EndLibraryItem -->
 </div>
+<div class="main-wrapper">
 <header>
 <h2 class="title">2012 Holiday Card</h2>
 <p class="project-types">Website, Photography</p>
 </header>
 <img src="assets/images/2012holidaycard_01.jpg" alt="The 2012 Akkerman Family Holiday Card.">
+<div class="poster">
+	<div class="poster-image">
+		<img height="1238" width="2200" src="assets/images/2012holidaycard_poster.jpg" alt="Poster image showing an outtake of the 2012 Holiday Card photo shoot." >
+  	</div>
+</div>
 <div id="slider01" class="flexslider">
   	<ul class="slides">
  		<li><img src="assets/images/2012holidaycard_02.jpg" alt="A 2012 Holiday Card website screen capture."></li>
@@ -103,6 +107,8 @@
         <img src="assets/images/2012holidaycard_process_03.jpg" alt="Process image from the 2012 Holiday Card project.">
     </div>
 </section>
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<a href="2014running.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -116,7 +122,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
