--- a/2014running.html
+++ b/2014running.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -52,6 +54,7 @@
 		</ul>
 	</div>
 </nav><!-- #EndLibraryItem -->
+</div>
 <div class="main-wrapper">
 <header>
 <h2 class="title">2014 Running</h2>
@@ -67,7 +70,11 @@
     </div>
 </section>
 <img src="assets/images/2014running_02.jpg" alt="The 2014 Running website as viewed on a laptop.">
-<img class="natural-img-img" src="assets/images/2014running_poster.jpg" alt="Poster image showing a highlight of the 2014 Running website." >
+<div class="poster">
+	<div class="poster-image">
+    	<img class="natural-img-img" src="assets/images/2014running_poster.jpg" alt="Poster image showing a highlight of the 2014 Running website." >
+    </div>
+</div>
 <section class="documentation">
 	<p>I really enjoy running. I never used to enjoy running until I discovered that I could capture and organize data with fancy watches (also, I like food, so the calorie offset doesn’t hurt). I like running because I like being outside. It’s a good place to think. In 2013 my goal was to run 500 miles. After logging 520 miles, I wanted to push myself even more in 2014. I set that goal at 749 miles. Conceptually it is the distance from where I currently live to where I grew up. To keep track of my goal in 2013 I made a basic text website to help keep track of whether I was on pace or needed to catch up. Since I already had the basic JavaScript solved, I decided to create a more visually engaging version so others could follow along.</p>
 	<article>
@@ -89,6 +96,7 @@
 </section>
 <img src="assets/images/2014running_04.jpg" alt="An image of the watch I used to capture my running data.">
 </div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<a href="theakkermans.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -103,6 +111,7 @@
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
 </footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
