--- a/absolutehorseradish.html
+++ b/absolutehorseradish.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,12 +53,9 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="960" width="1440" src="assets/images/absolutehorseradish_poster.jpg" alt="Poster image showing a detail from issue 1 of Absolute Horseradish." >
-  	</div>
+</nav><!-- #EndLibraryItem -->
 </div>
+<div class="main-wrapper">
 <header>
 <h2 class="title">Absolute Horseradish</h2>
 <p class="project-types">Website, Zine</p>
@@ -73,6 +72,11 @@
 <section class="embedded_video absolutehorseradish-video">
 	<figure><iframe style="display:block;" src="https://player.vimeo.com/video/157457720?title=0&byline=0&portrait=0" width="1000" height="563" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></figure>
 </section>
+<div class="poster">
+	<div class="poster-image">
+		<img height="960" width="1440" src="assets/images/absolutehorseradish_poster.jpg" alt="Poster image showing a detail from issue 1 of Absolute Horseradish." >
+    </div>
+</div>
 <section class="documentation">
 	<p>My wife and I are both professional designers. She specializes in print design while my expertise is digital. We decided that the most logical way for us to combine our skill sets other than dinner parties and cleaning our shared spaces was to make a zine. I created the first iteration of Absolute Horseradish in undergrad with my good friend Rowan during the days when free Angelfire websites were rampant. It was designed in Microsoft Word, using fonts that looked like variations on fast food restaurant logos. While Holly and I did want to polish up the details from that maiden voyage, we wanted the same carefree spirit to remain. The output from that creative experiment is the zine you see before you. Fun. Weird. Unpredictable. Most importantly, we made it together (we didn’t even fight over any of the details).</p>
 	<article>
@@ -93,6 +97,8 @@
     </article>
 </section>
 <img src="assets/images/absolutehorseradish_03.jpg" alt="The series of prototypes created before printing the final version of Absolute Horseradish Issue 1.">
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<a href="telfairball.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -106,7 +112,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
