--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+<div class="nav-wrapper">
 <nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
@@ -53,6 +54,7 @@
 		</ul>
 	</div>
 </nav>
+</div>
 <div class="main-wrapper">
 <div class="poster">
 	<div class="poster-image">
@@ -84,7 +86,8 @@
     	</div>
 	<!--End mc_embed_signup-->
 </section>
-
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 <button class="take-me-to-the-top">Back to Top</button>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
@@ -96,7 +99,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
