--- a/errors/notfound.html
+++ b/errors/notfound.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+<div class="nav-wrapper">
 <nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
@@ -53,6 +54,7 @@
 		</ul>
 	</div>
 </nav>
+</div>
 <div class="main-wrapper">
 	<audio loop id="player1">
      	<source src="../assets/audio/horse.ogg" type="audio/ogg" />
@@ -70,7 +72,8 @@
 <p>We are still working on this part. High-fives in the meantime. Click the links above or on the obnoxious horse image to go home.</p>
 <p class="photo-credit">Image via <a href="https://www.flickr.com/photos/usnationalarchives/4011426601/in/photolist-77tBnB-oeCd6N-ow6fmG-ou6jBS-ovNbBU-oegRhS-odiNLJ-ovJCqo-owf3XV-7VEWgA-odiLka-ouCkWQ-ouNANg-ouABg3-oeCHpq-otJva7-osLr4o-9GE6EB-ourQgu-ovLxnM-odkQL9-oeDyH4-odLAAf-odajiC-oeCakC-ouAzbw-oddS5Y-ow181x-odf4cn-5Sivni-ovyrHd-odzbJG-ouNLCy-dBVDxk-ow6wUm-ouNscP-ouAkSY-odiUWh-oekphQ-ouna1W-odjf3p-oeD8Kv-odmXSS-ouLFtj-owyyUk-odnRfa-oegyeL-ck7Nwo-ou73q1-owynSF" target="_blank">The U.S. National Archives Creative Commons Gallery</a></p>
 </header>
-
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 <button class="take-me-to-the-top">Back to Top</button>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
@@ -82,7 +85,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../assets/js/min/main-min.js"></script>
