--- a/process.html
+++ b/process.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,16 +53,18 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="1238" width="2200" src="assets/images/process_poster.jpg" alt="Poster image showing sketches of what would eventually become my new portfolio website." >
-  	</div>
+</nav><!-- #EndLibraryItem -->
 </div>
+<div class="main-wrapper">
 <header>
 <h2 class="title">Process</h2>
 <p class="project-types">Process, UI / UX Design</p>
 </header>
+<div class="poster">
+	<div class="poster-image">
+		<img height="1238" width="2200" src="assets/images/process_poster.jpg" alt="Poster image showing sketches of what would eventually become my new portfolio website." >
+  	</div>
+</div>
 <section class="documentation process">
 <h3 class="title">Website User Flow Diagram</h3>
 	<p>The main reason for the redesign was to move my portfolio website from pseudosuede.com to sethakkerman.com. It was time. People had trouble spelling it. I had been keeping written and sketched ideas for a while and wanted to work on my process instead of going from sketches straight to code. My first step was to create this basic user flow diagram. That way I could resolve as many potential roadblocks as I could discover early on in the process and really define what I wanted my new website to be.</p>
@@ -123,6 +127,8 @@
 	</div>
 </section>
 <img src="assets/images/process_07.jpg" alt="An image of the paper notecards I use for initial wireframing.">
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<a href="index.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Home</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -135,7 +141,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
