--- a/theakkermans.html
+++ b/theakkermans.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,17 +53,19 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="1080" width="1920" src="assets/images/theakkermans_poster.jpg" alt="Poster image showing the gradient and A mark used on The Akkermans website." >
-  	</div>
+</nav><!-- #EndLibraryItem -->
 </div>
+<div class="main-wrapper">
 <header>
 <h2 class="title">The Akkermans!</h2>
 <p class="project-types">Website, Digital Calling Card</p>
 </header>
 <img src="assets/images/theakkermans_01.jpg" alt="The Akkermans website as viewed on a laptop and an iPad to show the different gradient orientations.">
+<div class="poster">
+	<div class="poster-image">
+		<img height="1080" width="1920" src="assets/images/theakkermans_poster.jpg" alt="Poster image showing the gradient and A mark used on The Akkermans website." >
+  	</div>
+</div>
 <section class="column_content">
     <div class="left_container theakkermans">
         <img src="assets/images/theakkermans_02.jpg" alt="A compilation of screen captures showing the different friend mode color gradient options.">
@@ -86,6 +90,8 @@
 	<p><a href="http://theakkermans.com/" target="_blank">Visit The Akkermans! Website &gt;</a></p>
 </section>
 <img src="assets/images/theakkermans_03.jpg" alt="An information graphic showing how the gradient orientation changes to match the profile image orientation.">
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<a href="absolutehorseradish.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -99,7 +105,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
