--- a/foolsquest.html
+++ b/foolsquest.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,16 +53,18 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="960" width="1440" src="assets/images/foolsquest_poster.jpg" alt="Poster image showing a highlight from the Fool's Quest music video." >
-  	</div>
+</nav><!-- #EndLibraryItem -->
 </div>
+<div class="main-wrapper">
 <header>
 <h2 class="title">Fool's Quest</h2>
 <p class="project-types">Motion Graphics, Music Video</p>
 </header>
+ <div class="poster">
+	<div class="poster-image">
+		<img height="960" width="1440" src="assets/images/foolsquest_poster.jpg" alt="Poster image showing a highlight from the Fool's Quest music video." >
+  	</div>
+</div>
 <section class="embedded_video">
 	<figure><iframe style="display:block;" src="http://player.vimeo.com/video/17135713?portrait=0&amp;badge=0&amp;color=c9ff23" width="700" height="468" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></figure>
 </section>
@@ -104,6 +108,8 @@
     </article>
 </section>
 <img src="assets/images/foolsquest_process_01.jpg" alt="An screen capture of the After Effects project keyframes used to create the animation.">
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<a href="logos.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -117,7 +123,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
