--- a/fowlapproach.html
+++ b/fowlapproach.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,17 +53,19 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="1238" width="2200" src="assets/images/fowlapproach_poster.jpg" alt="Poster image showing the Fowl Approach to Bird Watching print being held." >
-  	</div>
+</nav><!-- #EndLibraryItem -->
 </div>
+<div class="main-wrapper">
 <header>
 <h2 class="title">A Fowl Approach to Bird Watching</h2>
 <p class="project-types">Printmaking, Woodcut Print</p>
 </header>
 <img src="assets/images/fowlapproach_01.jpg" alt="A closeup of the Fowl Approach to Bird Watching print.">
+<div class="poster">
+	<div class="poster-image">
+		<img height="1238" width="2200" src="assets/images/fowlapproach_poster.jpg" alt="Poster image showing the Fowl Approach to Bird Watching print being held." >
+  	</div>
+</div>
 <section class="column_content">
     <div class="project-callout-shell">
         <p class="project-callout">I learned that there are two different types of plywood. One that cuts smoothly and one that expedites carpal tunnel syndrome.</p>
@@ -90,6 +94,8 @@
     </article>
 </section>
 <img src="assets/images/fowlapproach_03.jpg" alt="A photograph of the blue plate used to print Fowl Approach to Bird Watching.">
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<a href="foolsquest.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -103,7 +109,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
