--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,7 +53,9 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
+</nav><!-- #EndLibraryItem -->
+</div>
+<div class="main-wrapper">
 <header>
 <h2 class="title">Featured Projects</h2>
 <p>A collection of websites, data visualizations, and illustrations.</p>
@@ -160,6 +164,7 @@
 	<p style="text-align:center; max-width:100%;"><a href="process.html">Curious about my process for building this website? &gt;</a></p>
 </section>
 </div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 <button class="take-me-to-the-top">Back to Top</button>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
@@ -171,7 +176,9 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+</footer><!-- #EndLibraryItem -->
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
 
 <script>
