--- a/logos.html
+++ b/logos.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,16 +53,18 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="1238" width="2200" src="assets/images/logos_poster.jpg" alt="Poster image showing sketches for the logos I have developed." >
-  	</div>
+</nav><!-- #EndLibraryItem -->
 </div>
+<div class="main-wrapper">
 <header>
 <h2 class="title">Logos</h2>
 <p class="project-types">Identities</p>
 </header>
+<div class="poster">
+	<div class="poster-image">
+		<img height="1238" width="2200" src="assets/images/logos_poster.jpg" alt="Poster image showing sketches for the logos I have developed." >
+  	</div>
+</div>
 <img class="logo-presentation" src="assets/images/logos_01.png" alt="The Console.Logging Co. logo.">
 <img class="logo-presentation" src="assets/images/logos_02.png" alt="The Cancer? I don't even know her. logo.">
 <img class="logo-presentation" src="assets/images/logos_03.png" alt="The Secret Society of Ink Slingers logo.">
@@ -95,6 +99,8 @@
     </article>
 </section>
 <img src="assets/images/logos_06.jpg" alt="A Cancer? I don't even know her. t-shirt is available through Cotton Bureau.">
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<a href="2012card.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -108,7 +114,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
