--- a/scadux.html
+++ b/scadux.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,16 +53,18 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
-  <div class="poster">
-	<div class="poster-image">
-		<img height="1238" width="2200" src="assets/images/scadux_poster.jpg" alt="Poster image the solar system illustration. It conveyed a user's mental models." >
-  	</div>
+</nav><!-- #EndLibraryItem -->
 </div>
+<div class="main-wrapper">
 <header>
 <h2 class="title">SCAD UX Theory Course</h2>
 <p class="project-types">Illustration</p>
 </header>
+<div class="poster">
+	<div class="poster-image">
+		<img height="1238" width="2200" src="assets/images/scadux_poster.jpg" alt="Poster image the solar system illustration. It conveyed a user's mental models." >
+  	</div>
+</div>
 <div id="slider01" class="flexslider white-bg">
   	<ul class="slides">
  		<li><img src="assets/images/scadux_01.jpg" alt="A thanksgiving illustration conveying perception and sensation."></li>
@@ -96,6 +100,8 @@
     </article>
 </section>
 <img src="assets/images/scadux_08.jpg" alt="Sketches for the user experience illustrations.">
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<a href="fowlapproach.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -109,7 +115,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
