--- a/tybeesurf.html
+++ b/tybeesurf.html
@@ -35,7 +35,9 @@
 
 </head>
 
-<body><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<body>
+<div class="nav-wrapper">
+<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -51,7 +53,9 @@
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem --><div class="main-wrapper">
+</nav><!-- #EndLibraryItem -->
+</div>
+<div class="main-wrapper">
   <div class="poster">
 	<div class="poster-image">
 		<img height="1238" width="2200" src="assets/images/tybeesurf_poster.jpg" alt="Poster image showing a detail of my Tybee Surf poster." >
@@ -86,6 +90,8 @@
     </article>
 </section>
 <img src="assets/images/tybeesurf_03.jpg" alt="A photograph showing a detail of my Tybee Surf poster.">
+</div>
+<div class="footer-wrapper">
 <section class="bottom-nav">
 	<button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button>
     <button class="take-me-to-the-top">Back to Top</button>
@@ -99,7 +105,8 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem --></div>
+</footer><!-- #EndLibraryItem -->
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
