Day 4 of editing my layout for a cleaner look
Day 4 of editing my layout for a cleaner look.

--- a/2012card.html
+++ b/2012card.html
@@ -77,11 +77,11 @@
    	</ul>          
 </div>
 <section class="column_content">
-    <div class="left_container holidaycardtwelve">
-        <img src="assets/images/2012holidaycard_08.jpg" alt="An outtake from the 2012 Holiday Card photo shoot where I get my Andre Agassi on.">
-    </div>
-    <div class="right_container project-callout-shell holidaycardtwelve">
+    <div class="left_container project-callout-shell holidaycardtwelve">
         <p class="project-callout">Even though it was early December, the temperature still reached 71&deg; the day of the photo shoot. The costume was not breathable.</p>
+    </div>
+    <div class="right_container holidaycardtwelve">
+        <img src="assets/images/2012holidaycard_08.jpg" alt="An outtake from the 2012 Holiday Card photo shoot where I get my Andre Agassi on.">
     </div>
 </section>
 <section class="documentation">
