--- a/contact.html
+++ b/contact.html
@@ -58,13 +58,13 @@
 <div class="main-wrapper">
 <header>
 <h2 class="title">Contact</h2>
-<p>If the contact methods in the footer of this page are not quite what you were looking for (ex. singing telegram, carrier pigeon routes, in-person secret handshake), feel free to sign-up for the mailing list. I will periodically send out updates to what I am working on.</p>
+<p>If the contact methods in the footer of this page are not quite what you were looking for (ex. singing telegram, carrier pigeon routes, in-person secret handshake), feel free to sign-up for the mailing list. I will occasionally send out updates.</p>
 </header>
-<div class="poster">
+<!--<div class="poster">
 	<div class="poster-image">
 		<img height="1238" width="2200" src="assets/images/contact_poster.jpg" alt="Poster image showing some pigeons being released on a quest to deliver messages." >
   	</div>
-</div>
+</div>-->
 <section class="documentation">
 <h3 class="title">Subscribe</h3>
   	<!-- Begin MailChimp Signup Form -->
@@ -84,7 +84,7 @@
              </form>
     	</div>
 	<!--End mc_embed_signup-->
-    <p class="photo-credit">Image via <a href="http://www.loc.gov/pictures/item/ggb2005018491/" target="_blank">The Library of Congress Creative Commons Gallery</a></p>
+    <!--<p class="photo-credit">Image via <a href="http://www.loc.gov/pictures/item/ggb2005018491/" target="_blank">The Library of Congress Creative Commons Gallery</a></p>-->
 </section>
 </div>
 <div class="footer-wrapper">
@@ -104,7 +104,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
-<script src="assets/js/min/mule-poster-cropper-staytop-min.js"></script>
+<!--<script src="assets/js/min/mule-poster-cropper-staytop-min.js"></script>-->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
