--- a/mikedoughty.html
+++ b/mikedoughty.html
@@ -65,6 +65,11 @@
 		<img height="1238" width="2200" src="assets/images/mikedoughty_poster.jpg" alt="Poster image showing the shirt I designed for Mike Doughty." >
   	</div>
 </div>
+<section class="column_content">
+    <div class="project-callout-shell">
+        <p class="project-callout">If you mouse over / touch the image below from left to right you can get an idea of how the screen printing process works<span class="owl_colors"></span>.</p>
+    </div>
+</section>
 <section> 
 <div class="test_mouse_test">
 	<div class="mousetest">
@@ -76,11 +81,6 @@
      	</ul>
 	</div>
 </div>
-</section>
-<section class="column_content">
-    <div class="project-callout-shell">
-        <p class="project-callout">If you mouse over / touch the image above from left to right you can get an idea of how the screen printing process works<span class="owl_colors"></span>.</p>
-    </div>
 </section>
 <section class="documentation">
 	<p>Mike Doughty asked me to create an illustration involving an owl and a cassette tape for his 2009 Fall Tour. I had been a fan of his music for years so needless to say I was pretty excited about this commission.</p>
