--- a/theakkermans.html
+++ b/theakkermans.html
@@ -67,11 +67,11 @@
   	</div>
 </div>
 <section class="column_content">
-    <div class="left_container theakkermans">
-        <img src="assets/images/theakkermans_02.jpg" alt="A compilation of screen captures showing the different friend mode color gradient options.">
-    </div>
-    <div class="right_container project-callout-shell theakkermans">
+    <div class="left_container project-callout-shell theakkermans">
         <p class="project-callout">There is a toggle button for a “friend mode” which swaps content and constantly fluctuates between different gradient combinations.</p>
+    </div>
+    <div class="right_container theakkermans">
+        <img src="assets/images/theakkermans_02.jpg" alt="A compilation of screen captures showing the different friend mode color gradient options.">
     </div>
 </section>
 <section class="documentation">
