--- a/foolsquest.html
+++ b/foolsquest.html
@@ -65,7 +65,7 @@
 		<img height="960" width="1440" src="assets/images/foolsquest_poster.jpg" alt="Poster image showing a highlight from the Fool's Quest music video." >
   	</div>
 </div>
-<section class="embedded_video">
+<section class="embedded_video foolsquest-video">
 	<figure><iframe style="display:block;" src="http://player.vimeo.com/video/17135713?portrait=0&amp;badge=0&amp;color=c9ff23" width="700" height="468" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></figure>
 </section>
 <section class="column_content">
