Updated 404 Error Page
Updated 404 Error Page to match the other new page layouts.

--- a/errors/notfound.html
+++ b/errors/notfound.html
@@ -56,7 +56,12 @@
 </nav>
 </div>
 <div class="main-wrapper">
-	<audio loop id="player1">
+<header>
+<h2 class="title">Bummer! It's not you, it's us.</h2>
+<p>We are still working on this part. High-fives in the meantime. Click the links above or on the obnoxious horse image to go home.</p>
+<p class="photo-credit">Image via <a href="https://www.flickr.com/photos/usnationalarchives/4011426601/in/photolist-77tBnB-oeCd6N-ow6fmG-ou6jBS-ovNbBU-oegRhS-odiNLJ-ovJCqo-owf3XV-7VEWgA-odiLka-ouCkWQ-ouNANg-ouABg3-oeCHpq-otJva7-osLr4o-9GE6EB-ourQgu-ovLxnM-odkQL9-oeDyH4-odLAAf-odajiC-oeCakC-ouAzbw-oddS5Y-ow181x-odf4cn-5Sivni-ovyrHd-odzbJG-ouNLCy-dBVDxk-ow6wUm-ouNscP-ouAkSY-odiUWh-oekphQ-ouna1W-odjf3p-oeD8Kv-odmXSS-ouLFtj-owyyUk-odnRfa-oegyeL-ck7Nwo-ou73q1-owynSF" target="_blank">The U.S. National Archives Creative Commons Gallery</a></p>
+</header>
+<audio loop id="player1">
      	<source src="../assets/audio/horse.ogg" type="audio/ogg" />
       	<source src="../assets/audio/horse.mp3" type="audio/mp3" />
  	</audio>
@@ -67,11 +72,6 @@
   	</div>
 </div>
 </a>
-<header>
-<h2 class="title">Bummer! It's not you, it's us.</h2>
-<p>We are still working on this part. High-fives in the meantime. Click the links above or on the obnoxious horse image to go home.</p>
-<p class="photo-credit">Image via <a href="https://www.flickr.com/photos/usnationalarchives/4011426601/in/photolist-77tBnB-oeCd6N-ow6fmG-ou6jBS-ovNbBU-oegRhS-odiNLJ-ovJCqo-owf3XV-7VEWgA-odiLka-ouCkWQ-ouNANg-ouABg3-oeCHpq-otJva7-osLr4o-9GE6EB-ourQgu-ovLxnM-odkQL9-oeDyH4-odLAAf-odajiC-oeCakC-ouAzbw-oddS5Y-ow181x-odf4cn-5Sivni-ovyrHd-odzbJG-ouNLCy-dBVDxk-ow6wUm-ouNscP-ouAkSY-odiUWh-oekphQ-ouna1W-odjf3p-oeD8Kv-odmXSS-ouLFtj-owyyUk-odnRfa-oegyeL-ck7Nwo-ou73q1-owynSF" target="_blank">The U.S. National Archives Creative Commons Gallery</a></p>
-</header>
 </div>
 <div class="footer-wrapper">
 <section class="bottom-nav">
@@ -85,8 +85,7 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem -->
-</div>
+</footer><!-- #EndLibraryItem --></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../assets/js/min/main-min.js"></script>
