--- a/about.html
+++ b/about.html
@@ -60,11 +60,11 @@
 <h2 class="title">About</h2>
 <p>I am an interactive and digital designer who likes to laugh with people. I have an insatiable curiosity for learning and a desire to leave things better than I found them.</p>
 </header>
-<!--<div class="poster">
+<div class="poster">
 	<div class="poster-image">
 		<img height="779" width="1385" src="assets/images/about_poster.jpg" alt="About page poster image showing me in a possibly creepy pose." >
   	</div>
-</div>-->
+</div>
 <section class="documentation">
     <h3 class="title">Clients</h3>
     	<ul>
@@ -122,7 +122,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
-<!--<script src="assets/js/min/mule-poster-cropper-staytop-min.js"></script>-->
+<script src="assets/js/min/mule-poster-cropper-staytop-min.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
