Added new Thumbnails and About Profile Image

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
             <li><span class="darker-highlight">AIGA</span> (2006 – present)</li>
             <li><span class="darker-highlight">Type Directors Club</span> (2008 – present)</li>
         </ul> 
-        <!--<p class="photo-credit">Portrait via The Hasselblad Photo Booth at The Museum of Arts and Design (MAD).</p>--> 
+        <p class="photo-credit">Portrait above by <a href="http://www.hollyakkerman.com/" target="_blank">Holly Akkerman</a>.</p> 
 </section>
 </div>
 <div class="footer-wrapper">
