First Day of creating Scad Course Cards Page.

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
         </a>
     </div>
     <div class="right_container thumb-image thumb-image-right">
-        <a href="telfairball.html">
-        <img src="assets/images/telfairball_thumb.jpg" alt="The thumbnail image for my Telfair Ball identity and invitation set.">
+        <a href="scadcoursecards.html">
+        <img src="assets/images/scadcoursecards_thumb.jpg" alt="The thumbnail image for my SCAD Course Cards project.">
         <div class="thumb-text-wrap">
-        <h3 class="title">Telfair Ball</h3>
-        <p class="project-types">Invitation Set, Identity</p>
+        <h3 class="title">SCAD Course Cards</h3>
+        <p class="project-types">Data Visualization</p>
         </div>
         </a>
     </div>
