Finalized Course Card edits

--- a/mikedoughty.html
+++ b/mikedoughty.html
@@ -105,7 +105,7 @@
 <section class="bottom-nav">
 	<a href="scadux.html"><button class="previous">&lt;<span class="bottom-nav-text">&nbsp;&nbsp;Prev</span></button></a>
     <button class="take-me-to-the-top">Back to Top</button>
-	<a href="telfairball.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
+	<a href="scadcoursecards.html"><button class="next"><span class="bottom-nav-text">Next&nbsp;&nbsp;</span>&gt;</button></a>
 </section><!-- #BeginLibraryItem "/Library/Footer.lbi" --><footer>
 	<h2 class="title">Contact</h2>
     <ul>
