Removed Contact page and removed Stickermule link

--- a/absolutehorseradish.html
+++ b/absolutehorseradish.html
@@ -36,8 +36,7 @@
 </head>
 
 <body>
-<div class="nav-wrapper">
-<!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
+<div class="nav-wrapper"><!-- #BeginLibraryItem "/Library/ProjectNav.lbi" --><nav>
 	<h1 class="header-logo"><a href="http://www.sethakkerman.com/">Seth Akkerman</a></h1>
 	<div class="naviconwrap">
  		<a class="navicon-button x">
@@ -48,13 +47,11 @@
 		<ul class="site-nav">
 			<li><a class="current" href="index.html">Projects</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
             <li><a href="http://sethakkerman.bigcartel.com/" target="_blank">Shop</a></li>
             <li><a href="http://blog.sethakkerman.com/" target="_blank">Blog</a></li>
 		</ul>
 	</div>
-</nav><!-- #EndLibraryItem -->
-</div>
+</nav><!-- #EndLibraryItem --></div>
 <div class="main-wrapper">
 <header>
 <h2 class="title">Absolute Horseradish</h2>
@@ -114,8 +111,7 @@
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
     <p class="copyright">Be Cool. All Work Owned by Seth Akkerman.</p>
-</footer><!-- #EndLibraryItem -->
-</div>
+</footer><!-- #EndLibraryItem --></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="assets/js/min/main-min.js"></script>
