Swapped footer Twitter link for Instagram

--- a/process.html
+++ b/process.html
@@ -133,7 +133,7 @@
 	<h2 class="title">Contact</h2>
     <ul>
     	<li><a href="mailto:seth@sethakkerman.com" target="_blank">seth@sethakkerman.com</a></li>
-        <li><a href="https://twitter.com/sethakkerman" target="_blank">@sethakkerman</a></li>
+        <li><a href="https://www.instagram.com/sethakkerman/" target="_blank">Instagram</a></li>
         <li><a href="https://dribbble.com/sethakkerman" target="_blank">Dribbble</a></li>
         <li><a href="https://github.com/sethakkerman" target="_blank">GitHub</a></li>
     </ul>
