Updated About page and other details

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 <div class="main-wrapper">
 <header>
 <h2 class="title">About</h2>
-<p>I am an interactive and digital designer who likes to laugh with people. I have an insatiable curiosity for learning and a desire to leave things better than I found them.</p>
+<p>I am an interactive and digital designer who likes to laugh with people. I have an insatiable curiosity for learning and a desire to leave things better than I found them. Currently designing at <a href="https://gauge.agency/" target="_blank">Gauge</a>.</p>
 </header>
 <div class="poster">
 	<div class="poster-image">
@@ -67,6 +67,7 @@
 <section class="documentation">
     <h3 class="title">Clients</h3>
     	<ul>
+            <li class="single-line-li">Two Tides Brewing Co.</li>
             <li class="single-line-li"><em>SF Weekly</em></li>
             <li class="single-line-li">Telfair Museums</li>
             <li class="single-line-li">Mike Doughty</li>
@@ -101,7 +102,7 @@
             <li><span class="darker-highlight">AIGA</span> (2006 – present)</li>
             <li><span class="darker-highlight">Type Directors Club</span> (2008 – present)</li>
         </ul> 
-        <p class="photo-credit">Portrait above by <a href="http://www.hollyakkerman.com/" target="_blank">Holly Akkerman</a>.</p> 
+        <p class="photo-credit">Portrait above by Daniel at <a href="https://gauge.agency/" target="_blank">Gauge</a>.</p> 
 </section>
 </div>
 <div class="footer-wrapper">
