--- a/absolutehorseradish.html
+++ b/absolutehorseradish.html
@@ -92,7 +92,7 @@
     <p class="project-detail-heading">URL</p>
 	<p class="project-detail-content"><a href="http://absolutehorseradish.com/" target="_blank">www.absolutehorseradish.com</a></p>
     <p class="project-detail-heading">Purchase</p>
-	<p class="project-detail-content"><a href="https://www.etsy.com/listing/269747952/absolute-horseradish-zine-issue-1" target="_blank">Zines from Etsy</a>, <a href="https://www.stickermule.com/marketplace/10947-absolute-horseradish-hotdog-sticker" target="_blank">Stickers from Stickermule</a></p>
+	<p class="project-detail-content"><a href="https://www.etsy.com/listing/269747952/absolute-horseradish-zine-issue-1" target="_blank">Zines from Etsy</a></p>
     </article>
 </section>
 <img src="assets/images/absolutehorseradish_03.jpg" alt="The series of prototypes created before printing the final version of Absolute Horseradish Issue 1.">
