--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 <div class="main-wrapper">
 <header>
 <h2 class="title">About</h2>
-<p>I am an interactive and digital designer who likes to laugh with people. I have an insatiable curiosity for learning and a desire to leave things better than I found them. Currently designing at <a href="https://gauge.agency/" target="_blank">Gauge</a>.</p>
+<p>I am an interactive and digital designer who likes to laugh with people. I have an insatiable curiosity for learning and a desire to leave things better than I found them. Currently designing at <a href="https://gauge.agency/" target="_blank">Gauge</a> for clients such as Duck Head, Southern Tide, Orafol Vehicle Wraps, Swarovski, and OldTimeCandy.com.</p>
 </header>
 <div class="poster">
 	<div class="poster-image">
@@ -73,12 +73,13 @@
   	</div>
 </div>
 <section class="documentation">
-    <h3 class="title">Clients</h3>
+    <h3 class="title">Freelance Clients</h3>
     	<ul>
             <li class="single-line-li">Two Tides Brewing Co.</li>
             <li class="single-line-li"><em>SF Weekly</em></li>
             <li class="single-line-li">Telfair Museums</li>
             <li class="single-line-li">Mike Doughty</li>
+            <li class="single-line-li">The Hornblow Group</li>
             <li class="single-line-li">Nocturne Records</li>
         </ul>
 	<h3 class="title">Published</h3>
